@@ -31,8 +31,6 @@ tasks.test {
 graalvmNative {
 	binaries {
 		named("test") {
-			buildArgs.add("--initialize-at-build-time=org.junit.platform.launcher.core.LauncherConfig")
-			buildArgs.add("--initialize-at-build-time=org.junit.jupiter.engine.config.InstantiatingConfigurationParameterConverter")
 			buildArgs.add("-H:+ReportExceptionStackTraces")
 		}
 	}
